--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,8 @@ main {
     height: calc(100vh - 160px);
     margin: 80px 0px;
     padding-top: 26px;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 /* || CHAT || ======================================================= */
