--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,11 @@ aside {
     flex-direction: column;
     align-items: center;
     padding: 0px 20px;
+    overflow-y: scroll;
+}
+
+aside::-webkit-scrollbar {
+    display: none;
 }
 
 aside p {
@@ -264,7 +269,7 @@ input::placeholder {
     font-style: italic;
 }
 
-.input-info {
+footer p {
     line-height: 25px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
